--- a/esp32 code/platformio.ini
+++ b/esp32 code/platformio.ini
@@ -12,4 +12,4 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-lib_deps = sstaub/TickTwo@^4.4.0
+lib_deps = sstaub/TickTwo@^4.4.0, worldfamouselectronics/PulseSensor Playground@^1.6.0
